# open-weather-map

./: .geminiignore  Dockerfile  GEMINI.md  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: testing-ci.yml
app/: main.py
app/core/: config.py  exceptions.py  logging_config.py
app/models/: weather.py
app/routers/: weather.py
app/services/: open_meteo.py
planning/: 20251119_project_review.md
tests/: test_main.py
tests/routers/: test_weather.py
tests/services/: test_open_meteo_service.py
