[project]
name = "open-weather-map"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.8",
    "anyio>=4.4.0",
]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# E/F: pep8 + pyflakes | I: isort | UP: pyupgrade | B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
addopts = "-vv --cov=app --cov-branch --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests de integración que tocan red/IO",
]
